--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "connect-session-sequelize": "^6.0.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "date-utils": "^1.2.21",
     "dateformat": "^3.0.3",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
@@ -42,4 +43,3 @@
     "ws": "^7.0.0"
   }
 }
-
