--- a/.gitignore
+++ b/.gitignore
@@ -245,3 +245,4 @@ $RECYCLE.BIN/
 
 # End of https://www.gitignore.io/api/node,macos,windows,intellij+all,visualstudiocode
 !user/.keep
+!uploads/.keep
