--- a/package.json
+++ b/package.json
@@ -40,6 +40,10 @@
     "uuid": "^3.3.2",
     "uuid4": "^1.1.4",
     "websocket-json-stream": "0.0.3",
-    "ws": "^7.0.0"
+    "ws": "^7.0.0",
+    "mocha": "^6.1.4",
+    "mongoose": "^5.5.11",
+    "redis": "^2.8.0",
+    "redis-server": "^1.2.2"
   }
 }
